add line charts
feat: add line charts

add line charts

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -136,8 +136,9 @@
                    </div>
 
                    <div class="col-xs-12 col-sm-2">
-                        CHARTS                                            <br>
-                       <a href="#">Area Charts</a>                        <br>
+                       CHARTS                                            <br>
+                       <img src="images/green.png">
+                       <a href="#/area-charts">Area Charts</a>             <br>
                        <a href="#">Bar Charts</a>                         <br>
                        <a href="#">Box Plot Charts</a>                    <br>
                        <a href="#">Bubble Charts</a>                      <br>
@@ -188,7 +189,6 @@
                        <img src="images/green.png">
                        <a href="#/button">Button</a>                      <br>
                        <a href="#">ButtonGroup</a>                        <br>
-                       <img src="images/orange.png">
                        <a href="#">Menu</a>                               <br>
                        <a href="#">PanelBar</a>                           <br>
                        <a href="#/tabstrip">TabStrip</a>                  <br>
