--- a/sample/src/line-charts/logarithmic-axis.html
+++ b/sample/src/line-charts/logarithmic-axis.html
@@ -4,7 +4,7 @@
           <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
                           data-source.bind="datasource"
                           legend.bind="{position: 'top'}"
-                          series-defaults.bind="{type: 'area'}"
+                          series-defaults.bind="{type: 'line'}"
                           series.bind="series"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
@@ -23,7 +23,7 @@
                       <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
                                       data-source.bind="datasource"
                                       legend.bind="{position: 'top'}"
-                                      series-defaults.bind="{type: 'area'}"
+                                      series-defaults.bind="{type: 'line'}"
                                       series.bind="series"
                                       value-axis.bind="valueAxis"
                                       category-axis.bind="categoryAxis"
