add line chart to about page
feat: line chart to about page

line chart to about page

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -99,7 +99,8 @@
                         <a href="#">Editor</a>                            <br>
                         <a href="#">Scheduler</a>                         <br>
                         <a href="#">Bar Charts</a>                        <br>
-                        <a href="#">Line Charts</a>                       <br>
+                        <img src="images/green.png">
+                        <a href="#/line-charts">Line Charts</a>           <br>
                         <a href="#">Stock Charts</a>                      <br>
                         <a href="#/dropdownlist">DropDownList</a>         <br>
                         <a href="#">Window</a>                            <br>
@@ -138,14 +139,15 @@
                    <div class="col-xs-12 col-sm-2">
                        CHARTS                                            <br>
                        <img src="images/green.png">
-                       <a href="#/area-charts">Area Charts</a>             <br>
+                       <a href="#/area-charts">Area Charts</a>            <br>
                        <a href="#">Bar Charts</a>                         <br>
                        <a href="#">Box Plot Charts</a>                    <br>
                        <a href="#">Bubble Charts</a>                      <br>
                        <a href="#">Bullet Charts</a>                      <br>
                        <a href="#">Donut Charts</a>                       <br>
                        <a href="#">Funnel Charts</a>                      <br>
-                       <a href="#">Line Charts</a>                        <br>
+                       <img src="images/green.png">
+                       <a href="#/line-charts">Line Charts</a>            <br>
                        <a href="#">Pie Charts</a>                         <br>
                        <a href="#">Polar Charts</a>                       <br>
                        <a href="#">Radar Charts</a>                       <br>
