--- a/sample/src/line-charts/smooth-line.html
+++ b/sample/src/line-charts/smooth-line.html
@@ -28,7 +28,7 @@
 
                 <div>
                     <au-code language="javascript">
-                      export class SmoothArea {
+                      export class SmoothLine {
                         series = [{
                             type: "line",
                             data: [20, 1, 18, 3, 15, 5, 10, 6, 9, 6, 10, 5, 13, 3, 16, 1, 19, 1, 20, 2, 18, 5, 12, 7, 10, 8],
