--- a/sample/src/charts/line-charts/binding-to-grouped-data.html
+++ b/sample/src/charts/line-charts/binding-to-grouped-data.html
@@ -36,7 +36,7 @@
                         datasource = new kendo.data.DataSource({
                           transport: {
                             read: function(options) {
-                              return System.import('area-charts/json/stock-data-2011.json!json')
+                              return System.import('charts/line-charts/json/stock-data-2011.json!json')
                               .then(data => options.success(data));
                             }
                           },
@@ -62,7 +62,7 @@
                         });
 
                         series = [{
-                            type: "area",
+                            type: "line",
                             field: "close",
                             name: "${group.value} (close)"
                         }];
