add partial implementation of bar chart
feat: add partial implementation of bar chart

feat: add partial implementation of bar chart

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -39,7 +39,15 @@
           </a>
           <ul class="dropdown-menu">
             <li><a route-href="route: area-charts">Area charts</a></li>
+            <li><a route-href="route: bar-charts">Bar charts</a></li>
+<!--             <li><a route-href="route: line-charts">Box plot charts</a></li>
+            <li><a route-href="route: line-charts">Bubble charts</a></li>
+            <li><a route-href="route: line-charts">Bullet charts</a></li>
+            <li><a route-href="route: line-charts">Donut charts</a></li>
+            <li><a route-href="route: line-charts">Funnel charts</a></li> -->
             <li><a route-href="route: line-charts">Line charts</a></li>
+<!--             <li><a route-href="route: line-charts">Pie charts</a></li>
+ -->
           </ul>
         </li>
 
