--- a/sample/src/charts/bar-charts/custom-pan-and-zoom.html
+++ b/sample/src/charts/bar-charts/custom-pan-and-zoom.html
@@ -9,6 +9,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
@@ -20,7 +21,15 @@
                     <au-code language="javascript">
 
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    In addition to the built-in pan and zoom functionality, the Kendo UI chart supports custom panning and zooming as well.
+
+                    This example represents a custom implementation wiring the drag, dragEnd and zoom events of the chart. The idea is to intercept when these events are raised and fetch the data that has to be visualized in the chart, using a dynamical query by invoking the [query method](http://docs.telerik.com/kendo-ui/api/javascript/data/datasource#methods-query) of the chart data source. Review the code snippets in the demo for more details.
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
