--- a/sample/src/charts/bar-charts/error-bars.html
+++ b/sample/src/charts/bar-charts/error-bars.html
@@ -1,7 +1,14 @@
 <template>
     <section>
         <collapse-panel title="Error bars" allow-collapse.bind="false">
-
+           <au-kendo-chart title.bind="{text: 'Gross domestic product growth and standard error'}"
+                            legend.bind="{position: 'top'}"
+                            series-defaults.bind="seriesDefaults"
+                            series.bind="series"
+                            value-axis.bind="valueAxis"
+                            category-axis.bind="categoryAxis"
+                            tooltip.bind="tooltip">
+            </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -9,18 +16,77 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
-
+                       <au-kendo-chart title.bind="{text: 'Gross domestic product growth and standard error'}"
+                                        legend.bind="{position: 'top'}"
+                                        series-defaults.bind="seriesDefaults"
+                                        series.bind="series"
+                                        value-axis.bind="valueAxis"
+                                        category-axis.bind="categoryAxis"
+                                        tooltip.bind="tooltip">
+                        </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                        export class ErrorBars {
+                          legend = {
+                              visible: false
+                          };
+
+                          seriesDefaults = {
+                              type: "column"
+                          };
+
+                          series = [{
+                              data: [4.743, 7.295, 7.175, 6.376, 8.153, 8.535, 5.247, -7.832, 4.3, 4.3],
+                              errorBars: {
+                                  value: "stderr"
+                              }
+                          }];
+
+                          valueAxis = {
+                              labels: {
+                                  format: "{0}%"
+                              },
+                              line: {
+                                  visible: false
+                              },
+                              axisCrossingValue: 0
+                          };
+
+                          categoryAxis = {
+                              categories: [2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011],
+                              line: {
+                                  visible: false
+                              },
+                              labels: {
+                                  padding: { top: 160 }
+                              }
+                          };
+
+                          tooltip = {
+                              visible: true,
+                              format: "{0}%"
+                          }
+                        }
 
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    This example demonstrates how to show variability of data using the Error Bars feature of the Kendo UI chart. The Error bars are configured via the series -> errorBars setting and are offered for the following series types: Area, Vertical Area, Column, Bar, Line, Vertical Line, Scatter and ScatterLine.
+
+                    The error bars support statistical calculations based on the series data. The supported types are [standard error](https://en.wikipedia.org/wiki/Standard_error) and [population standard deviation](https://en.wikipedia.org/wiki/Standard_deviation). To specify that standard error should be used, you need to set "stderr" as a value.
+
+                    You can find more information in the following help article: [Error Bars](http://docs.telerik.com/kendo-ui/dataviz/chart/error-bars).
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
