--- a/sample/src/charts/bar-charts/gap-and-spacing.html
+++ b/sample/src/charts/bar-charts/gap-and-spacing.html
@@ -1,12 +1,36 @@
 <template>
     <section>
         <collapse-panel title="Gap and spacing" allow-collapse.bind="false">
- <!--          <au-kendo-chart title.bind="{text: 'A digital signal'}"
-                          legend.bind="{visible: false}"
+            <au-kendo-chart title.bind="{text: 'Site Visitors Stats \n /thousands/'}"
+                          legend.bind="{position: 'bottom'}"
+                          series-defaults.bind="seriesDefaults"
                           series.bind="series"
                           value-axis.bind="valueAxis"
-                          category-axis.bind="categoryAxis">
-          </au-kendo-chart> -->
+                          category-axis.bind="categoryAxis"
+                          tooltip.bind="tooltip">
+            </au-kendo-chart>
+
+            <div class="box wide">
+                <div class="box-col">
+                    <h4>Gap</h4>
+                    <ul class="options">
+                        <li>
+                            <input id="gap" type="number" value="1.5" step="0.1" style="width: 80px;" />
+                            <button id="getGap" class="k-button">Set gap</button>
+                        </li>
+                    </ul>
+                </div>
+                <div class="box-col">
+                    <h4>Spacing</h4>
+                    <ul class="options">
+                        <li>
+                            <input id="spacing" type="number" value="0.4" step="0.1" style="width: 80px;" />
+                            <button id="getSpacing" class="k-button">Set spacing</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -14,19 +38,88 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
+                        <au-kendo-chart title.bind="{text: 'Site Visitors Stats \n /thousands/'}"
+                                      legend.bind="{position: 'bottom'}"
+                                      series-defaults.bind="seriesDefaults"
+                                      series.bind="series"
+                                      value-axis.bind="valueAxis"
+                                      category-axis.bind="categoryAxis"
+                                      tooltip.bind="tooltip">
+                        </au-kendo-chart>
 
+                        <div class="box wide">
+                            <div class="box-col">
+                                <h4>Gap</h4>
+                                <ul class="options">
+                                    <li>
+                                        <input id="gap" type="number" value="1.5" step="0.1" style="width: 80px;" />
+                                        <button id="getGap" class="k-button">Set gap</button>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="box-col">
+                                <h4>Spacing</h4>
+                                <ul class="options">
+                                    <li>
+                                        <input id="spacing" type="number" value="0.4" step="0.1" style="width: 80px;" />
+                                        <button id="getSpacing" class="k-button">Set spacing</button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                        export class GapAndSpacing {
 
+                          seriesDefaults = {
+                            type: "column"
+                          };
+
+                          series = [{
+                              name: "Total Visits",
+                              data: [56000, 63000, 74000, 91000, 117000, 138000]
+                          }, {
+                              name: "Unique visitors",
+                              data: [52000, 34000, 23000, 48000, 67000, 83000]
+                          }];
+
+                          valueAxis = {
+                              line: {
+                                  visible: false
+                              }
+                          };
+
+                          categoryAxis = {
+                              categories: ["Jan", "Feb", "Mar", "Apr", "May", "Jun"],
+                              majorGridLines: {
+                                  visible: false
+                              }
+                          };
+
+                          tooltip = {
+                              visible: true,
+                              template: "${series.name} ${value}"
+                          }
+                        }
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    The Bar chart component allows you to control the distance between its categories as well as between series points within a category. This can be done through the [series.gap](http://docs.telerik.com/kendo-ui/api/javascript/dataviz/ui/chart#configuration-series.gap) and [series.spacing](http://docs.telerik.com/kendo-ui/api/javascript/dataviz/ui/chart#configuration-series.spacing) client-side settings of the chart.
+                    In this demo, you can play with the provided GAP and SPACING dropdowns to change the values of the above properties.
+                    </au-markdown>
+                </div>
+
             </div>
         </collapse-panel>
+
     </section>
 </template>
