--- a/sample/src/charts/bar-charts/pan-and-zoom.html
+++ b/sample/src/charts/bar-charts/pan-and-zoom.html
@@ -2,6 +2,17 @@
     <section>
         <collapse-panel title="Pan and zoom" allow-collapse.bind="false">
 
+            <div class="box wide">
+                <p>Use SHIFT + Mouse Drag Region Selection combination on mouse-enabled devices to zoom in data for a specific period of time</p>
+            </div>
+            <au-kendo-chart title.bind="title"
+                            dataSource.bind="dataSource"
+                            series.bind="series"
+                            renderAs.bind="renderAs"
+                            pannable.bind="pannable"
+                            zoomable.bind="zoomable"
+                            category-axis.bind="categoryAxis">
+            </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -9,6 +20,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
@@ -20,7 +32,17 @@
                     <au-code language="javascript">
 
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    The Pan and Zoom features allow you to navigate through and zoom in/out the Telerik Kendo UI Bar Chart.
+
+                    You can enable the pan feature through the pannable setting as well as to lock either the X or Y axis using the nested lock attribute.
+
+                    To enable the zoom set the zoomable configuration option. You can also fine tune the mouse wheel and selection zooming through the available mousewheel and selection nested properties.
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
