--- a/sample/src/charts/bar-charts/plot-bands.html
+++ b/sample/src/charts/bar-charts/plot-bands.html
@@ -1,12 +1,14 @@
 <template>
     <section>
         <collapse-panel title="Plot bands" allow-collapse.bind="false">
-<!--           <au-kendo-chart title.bind="{text: 'A digital signal'}"
-                          legend.bind="{visible: false}"
+          <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
+                          data-source.bind="datasource"
+                          legend.bind="{position: 'top'}"
                           series.bind="series"
                           value-axis.bind="valueAxis"
-                          category-axis.bind="categoryAxis">
-          </au-kendo-chart> -->
+                          category-axis.bind="categoryAxis"
+                          tooltip.bind="tooltip">
+          </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -14,18 +16,101 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
-
+                      <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
+                                      data-source.bind="datasource"
+                                      legend.bind="{position: 'top'}"
+                                      series.bind="series"
+                                      value-axis.bind="valueAxis"
+                                      category-axis.bind="categoryAxis"
+                                      tooltip.bind="tooltip">
+                      </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                        export class PlotBands {
+                          datasource = new kendo.data.DataSource({
+                            transport: {
+                              read: function(options) {
+                                return System.import('charts/bar-charts/json/spain-electricity.json!json')
+                                .then(data => options.success(data));
+                              }
+                            },
+                            sort: {
+                                field: "year",
+                                dir: "asc"
+                            }
+                          });
 
+                          series = [{
+                                field: "nuclear",
+                                name: "Nuclear"
+                            }, {
+                                field: "hydro",
+                                name: "Hydro"
+                            }, {
+                                field: "wind",
+                                name: "Wind"
+                          }];
+
+                          valueAxis = {
+                              labels: {
+                                  format: "N0"
+                              },
+                              majorUnit: 10000,
+                              plotBands: [{
+                                  from: 10000,
+                                  to: 30000,
+                                  color: "#c00",
+                                  opacity: 0.3
+                              }, {
+                                  from: 30000,
+                                  to: 30500,
+                                  color: "#c00",
+                                  opacity: 0.8
+                              }],
+                              max: 70000,
+                              line: {
+                                  visible: false
+                              }
+                          };
+
+                          categoryAxis = {
+                              field: "year",
+                              labels: {
+                                  rotation: -90
+                              },
+                              crosshair: {
+                                  visible: true
+                              }
+                          };
+
+                          tooltip = {
+                              visible: true,
+                              format: "N0"
+                          };
+                        }
                     </au-code>
-                </div
+                </div>
+
+               <div>
+                    <au-markdown>
+                        <p></p>
+                        Plot Bands are colored ranges which are used to highlight certain areas in the Kendo UI chart, usually specific thresholds designating whether the data falls under these boundaries or not. You can create them by setting valueAxis-> plotBands values.
+
+                        Each Plot Band could be configured independently by specifying the following properties:
+
+                        - From — the start position of the plot band.
+                        - To — the end position of the plot band.
+                        - Opacity — the opacity of the plot band.
+                        - Color — the color of the plot band.
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
