--- a/sample/src/charts/bar-charts/stacked-and-grouped-bars.html
+++ b/sample/src/charts/bar-charts/stacked-and-grouped-bars.html
@@ -1,14 +1,14 @@
 <template>
     <section>
         <collapse-panel title="Stacked and grouped bars" allow-collapse.bind="false">
- <!--          <au-kendo-chart title.bind="{text: 'Browser Usage Trends'}"
-                          legend.bind="{position: 'bottom'}"
-                          series-defaults.bind="{type: 'line', stack: true}"
+          <au-kendo-chart title.bind="{text: 'World population by age group and sex'}"
+                          legend.bind="legend"
+                          series-efaults.bind="seriesDefaults"
                           series.bind="series"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
                           tooltip.bind="tooltip">
-          </au-kendo-chart> -->
+          </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -16,18 +16,110 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
-
+                       <au-kendo-chart title.bind="{text: 'World population by age group and sex'}"
+                                        legend.bind="legend"
+                                        series-efaults.bind="seriesDefaults"
+                                        series.bind="series"
+                                        value-axis.bind="valueAxis"
+                                        category-axis.bind="categoryAxis"
+                                        tooltip.bind="tooltip">
+                        </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                      export class StackedAndGroupedBars {
 
+                        legend = {
+                            visible: false
+                        };
+
+                        seriesDefaults = {
+                            type: "column"
+                        };
+
+                        series = [{
+                              name: "0-19",
+                              stack: "Female",
+                              data: [854622, 925844, 984930, 1044982, 1100941, 1139797, 1172929, 1184435, 1184654]
+                          }, {
+                              name: "20-39",
+                              stack: "Female",
+                              data: [490550, 555695, 627763, 718568, 810169, 883051, 942151, 1001395, 1058439]
+                          }, {
+                              name: "40-64",
+                              stack: "Female",
+                              data: [379788, 411217, 447201, 484739, 395533, 435485, 499861, 569114, 655066]
+                          }, {
+                              name: "65-79",
+                              stack: "Female",
+                              data: [97894, 113287, 128808, 137459, 152171, 170262, 191015, 210767, 226956]
+                          }, {
+                              name: "80+",
+                              stack: "Female",
+                              data: [16358, 18576, 24586, 30352, 36724, 42939, 46413, 54984, 66029]
+                          }, {
+                              name: "0-19",
+                              stack: "Male",
+                              data: [900268, 972205, 1031421, 1094547, 1155600, 1202766, 1244870, 1263637, 1268165]
+                          }, {
+                              name: "20-39",
+                              stack: "Male",
+                              data: [509133, 579487, 655494, 749511, 844496, 916479, 973694, 1036548, 1099507]
+                          }, {
+                              name: "40-64",
+                              stack: "Male",
+                              data: [364179, 401396, 440844, 479798, 390590, 430666, 495030, 564169, 646563]
+                          }, {
+                              name: "65-79",
+                              stack: "Male",
+                              data: [74208, 86516, 98956, 107352, 120614, 138868, 158387, 177078, 192156]
+                          }, {
+                              name: "80+",
+                              stack: "Male",
+                              data: [9187, 10752, 13007, 15983, 19442, 23020, 25868, 31462, 39223]
+                          }];
+
+                         seriesColors = ["#cd1533", "#d43851", "#dc5c71", "#e47f8f", "#eba1ad",
+                                         "#009bd7", "#26aadd", "#4db9e3", "#73c8e9", "#99d7ef"];
+
+                        valueAxis = {
+                           labels: {
+                                template: "#= kendo.format('{0:N0}', value / 1000) # M"
+                            },
+                            line: {
+                                visible: false
+                            },
+
+                        };
+
+                        categoryAxis = {
+                          categories: [1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010],
+                          majorGridLines: {
+                              visible: false
+                          }
+                        };
+
+                        tooltip = {
+                            visible: true,
+                            template: "#= series.stack #s, age #= series.name #"
+                        }
+                      }
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    In general, the data series in a stacked column or bar chart have one stack per category. There are cases in which you might want to arrange your data so that the chart appears to have more than one stack per category, i.e. grouping the stacks.
+
+                    In this demo you can see how to group stacked columns to display the World population compared by age and sex in a specific period of time by setting the series -> stack option, which applies the name of the stack that the series belong to (Male or Female in this sample)
+                    </au-markdown>
+                </div>
             </div>
         </collapse-panel>
     </section>
