fix minor bugs in charts section
fix: minor bugs in charts section

minor bugs in charts section

--- a/sample/src/app.html
+++ b/sample/src/app.html
@@ -3,6 +3,7 @@
     <require from="bootstrap/css/bootstrap.css"></require>
     <require from="kendo-ui/styles/kendo.common.min.css!"></require>
     <require from="kendo-ui/styles/kendo.bootstrap.min.css!"></require>
+    <require from="../styles/samples.css!"></require>
 
   	<nav-bar router.bind="router"></nav-bar>
 
