--- a/sample/index.html
+++ b/sample/index.html
@@ -10,7 +10,7 @@
 
   <body aurelia-app="main">
     <div class="splash">
-      <div class="message">Aurelia Kendo Samples</div>
+      <div class="message">Aurelia KendoUI Samples</div>
       <i class="fa fa-spinner fa-spin"></i>
     </div>
 
