--- a/sample/src/charts/area-charts/error-bars.html
+++ b/sample/src/charts/area-charts/error-bars.html
@@ -3,7 +3,7 @@
         <collapse-panel title="Error bars" allow-collapse.bind="false">
           <au-kendo-chart title.bind="{text: 'GDP growth and standard deviation'}"
                           legend.bind="{visible: false}"
-                          series-defaults.bind="{type: 'line'}"
+                          series-defaults.bind="{type: 'area'}"
                           series.bind="series"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
@@ -21,7 +21,7 @@
                     <au-code language="markup">
                       <au-kendo-chart title.bind="{text: 'GDP growth and standard deviation'}"
                                       legend.bind="{visible: false}"
-                                      series-defaults.bind="{type: 'line'}"
+                                      series-defaults.bind="{type: 'area'}"
                                       series.bind="series"
                                       value-axis.bind="valueAxis"
                                       category-axis.bind="categoryAxis"
