--- a/sample/src/charts/line-charts/error-bars.html
+++ b/sample/src/charts/line-charts/error-bars.html
@@ -1,14 +1,15 @@
 <template>
     <section>
         <collapse-panel title="Error bars" allow-collapse.bind="false">
-          <au-kendo-chart title.bind="{text: 'GDP growth and standard deviation'}"
-                          legend.bind="{visible: false}"
-                          series-defaults.bind="{type: 'line'}"
+          <au-kendo-chart title.bind="{text: 'Gross domestic product growth and percentage error'}"
+                          legend.bind="{position: 'bottom'}"
+                          series-defaults.bind="seriesDefaults"
                           series.bind="series"
                           value-axis.bind="valueAxis"
                           category-axis.bind="categoryAxis"
                           tooltip.bind="tooltip">
           </au-kendo-chart>
+
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -16,28 +17,38 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
-                      <au-kendo-chart title.bind="{text: 'GDP growth and standard deviation'}"
-                                      legend.bind="{visible: false}"
-                                      series-defaults.bind="{type: 'line'}"
+                       <au-kendo-chart title.bind="{text: 'Gross domestic product growth and percentage error'}"
+                                      legend.bind="{position: 'bottom'}"
+                                      series-defaults.bind="seriesDefaults"
                                       series.bind="series"
                                       value-axis.bind="valueAxis"
                                       category-axis.bind="categoryAxis"
                                       tooltip.bind="tooltip">
-                      </au-kendo-chart>
+                        </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
                       export class ErrorBars {
-                        series = [{
-                            data: [7.943, 7.848, 9.284, 9.263, 9.801, 3.890, 8.238, 9.552],
+
+                        seriesDefaults = {
+                            type: "line",
                             errorBars: {
-                                value: "stddev"
+                                value: "percentage(20)"
                             }
+                        };
+
+                        series = [{
+                            name: "India",
+                            data: [3.907, 7.943, 7.848, 9.284, 9.263, 9.801, 3.890, 8.238, 9.552, 6.855]
+                        }, {
+                            name: "World",
+                            data: [1.988, 2.733, 3.994, 3.464, 4.001, 3.939, 1.333, -2.245, 4.339, 2.727]
                         }];
 
                         valueAxis = {
@@ -51,20 +62,36 @@
                         };
 
                         categoryAxis = {
-                            categories: [2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010],
+                            categories: [2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011],
                             line: {
-                                visible: false
+                                    visible: false
+                                },
+                                labels: {
+                                    padding: { top: 80 }
                             }
                         };
 
                         tooltip = {
                             visible: true,
                             format: "{0}%",
-                            template: "${value} (σ = ${kendo.toString(high - low, 'N2')})"
+                            template: "${series.name} ${value}"
                         }
                       }
+
                     </au-code>
-                </div
+                </div>
+
+                <div>
+                    <au-markdown>
+                    This sample presents how to show variability of data using the Error Bars feature of the Kendo UI line chart. The Error bars are specified as part of the seriesDefaults -> errorBars setting and are offered by the following series types: Area, Vertical Area, Column, Bar, Line, Vertical Line, Scatter and ScatterLine.
+
+                    The error bars support statistical calculations based on the series data. The supported types are [percentage value](http://docs.telerik.com/kendo-ui/dataviz/chart/error-bars#setting-a-percentage-value), [standard error](https://en.wikipedia.org/wiki/Standard_error) and [population standard deviation](https://en.wikipedia.org/wiki/Standard_deviation) and other. To specify that percentage error should be used, you need to set "percentage(Int)" as a value, i.e.
+
+                    value: "percentage(20)"
+                    You can find more information in the following help article: [Error Bars](http://docs.telerik.com/kendo-ui/dataviz/chart/error-bars).
+                    </au-markdown>
+                </div>
+
             </div>
         </collapse-panel>
     </section>
