add box plot charts
feat: add box plot charts

add box plot charts

--- a/sample/src/about/about.html
+++ b/sample/src/about/about.html
@@ -98,7 +98,8 @@
                         <a href="#/grid">Grid</a>                         <br>
                         <a href="#">Editor</a>                            <br>
                         <a href="#">Scheduler</a>                         <br>
-                        <a href="#">Bar Charts</a>                        <br>
+                        <img src="images/green.png">
+                        <a href="#/bar-charts">Bar Charts</a>      <br>
                         <img src="images/green.png">
                         <a href="#/line-charts">Line Charts</a>           <br>
                         <a href="#">Stock Charts</a>                      <br>
@@ -140,8 +141,10 @@
                        CHARTS                                            <br>
                        <img src="images/green.png">
                        <a href="#/area-charts">Area Charts</a>            <br>
-                       <a href="#">Bar Charts</a>                         <br>
-                       <a href="#">Box Plot Charts</a>                    <br>
+                       <img src="images/green.png">
+                       <a href="#/bar-charts">Bar Charts</a>                         <br>
+                       <img src="images/green.png">
+                       <a href="#/box-plot-charts">Box Plot Charts</a>    <br>
                        <a href="#">Bubble Charts</a>                      <br>
                        <a href="#">Bullet Charts</a>                      <br>
                        <a href="#">Donut Charts</a>                       <br>
