fix(sample): fix datasource reference
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/155

--- a/sample/src/charts/box-plot-charts/binding-to-remote-data.html
+++ b/sample/src/charts/box-plot-charts/binding-to-remote-data.html
@@ -3,7 +3,7 @@
         <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
           <au-kendo-chart title.bind="{text: 'Ozone Concentration (ppm)'}"
                           legend.bind="legend"
-                          data-source.bind="dataSource"
+                          data-source.bind="datasource"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
                           value-axis.bind="valueAxis"
