feat(sample): polar charts

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -48,6 +48,7 @@
             <li><a route-href="route: line-charts">Line charts</a></li>
 <!--             <li><a route-href="route: pie-charts">Pie charts</a></li>
  -->
+            <li><a route-href="route: polar-charts">Polar charts</a></li>
           </ul>
         </li>
 
