add bubble chart control
Feat(sample): add bubble chart control

add bubble chart control

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -41,8 +41,8 @@
             <li><a route-href="route: area-charts">Area charts</a></li>
             <li><a route-href="route: bar-charts">Bar charts</a></li>
             <li><a route-href="route: box-plot-charts">Box plot charts</a></li>
-<!--            <li><a route-href="route: bubble-charts">Bubble charts</a></li>
-            <li><a route-href="route: bullet-charts">Bullet charts</a></li>
+            <li><a route-href="route: bubble-charts">Bubble charts</a></li>
+<!--            <li><a route-href="route: bullet-charts">Bullet charts</a></li>
             <li><a route-href="route: donut-charts">Donut charts</a></li>
             <li><a route-href="route: funnel-charts">Funnel charts</a></li> -->
             <li><a route-href="route: line-charts">Line charts</a></li>
