--- a/sample/src/charts/polar-charts/polar-line.html
+++ b/sample/src/charts/polar-charts/polar-line.html
@@ -12,88 +12,67 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
-                    <li>Description</li>
                 </ul>
                 <div>
                     <au-code language="markup">
-                      <au-kendo-chart title.bind="{text: 'Gross Domestic product growth \n /GRP annual %/'}"
-                                      legend.bind="{position: 'bottom'}"
+                      <au-kendo-chart title.bind="{text: 'Polar plot'}"
                                       series-defaults.bind="seriesDefaults"
-                                      series.bind="series"
-                                      value-axis.bind="valueAxis"
-                                      category-axis.bind="categoryAxis"
-                                      tooltip.bind="tooltip">
+                                      series.bind="series">
                       </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
-                      export class BasicUse {
+                      export class PolarLine {
 
                         seriesDefaults = {
-                          type: "line",
-                          line: {
-                            line: {
-                              style: "smooth"
-                            }
-                          }
+                            type: "polarLine",
+                            style: "smooth"
                         };
 
                         series = [{
-                            name: "India",
-                            data: [3.907, 7.943, 7.848, 9.284, 9.263, 9.801, 3.890, 8.238, 9.552, 6.855]
-                        }, {
-                            name: "World",
-                            data: [1.988, 2.733, 3.994, 3.464, 4.001, 3.939, 1.333, -2.245, 4.339, 2.727]
-                        }, {
-                            name: "Haiti",
-                            data: [-0.253, 0.362, -3.519, 1.799, 2.252, 3.343, 0.843, 2.877, -5.416, 5.590]
+                            data: [
+                                [0, 0], [15, 2], [30, 4],
+                                [45, 6], [60, 8], [75, 10],
+                                [90, 12], [105, 14], [120, 16],
+                                [135, 18], [150, 20], [165, 22],
+                                [180, 24], [195, 26], [210, 28],
+                                [225, 30], [240, 32], [255, 34],
+                                [270, 36], [285, 38], [300, 40],
+                                [315, 42], [330, 44], [345, 46],
+                                [360, 48], [15, 50], [30, 52],
+                                [45, 54], [60, 56], [75, 58], [90, 60]
+                            ]
+                        },{
+                            data: [
+                                [0, 0], [15, 1], [30, 2],
+                                [45, 3], [60, 4], [75, 5],
+                                [90, 6], [105, 7], [120, 8],
+                                [135, 9], [150, 10], [165, 11],
+                                [180, 12], [195, 13], [210, 14],
+                                [225, 15], [240, 16], [255, 17],
+                                [270, 18], [285, 19], [300, 20],
+                                [315, 21], [330, 22], [345, 23],
+                                [360, 24], [15, 25], [30, 26],
+                                [45, 27], [60, 28], [75, 29], [90, 30]
+                            ]
+                        },{
+                            data: [
+                                [0, 0], [15, 3], [30, 6],
+                                [45, 9], [60, 12], [75, 15],
+                                [90, 18], [105, 21], [120, 24],
+                                [135, 27], [150, 30], [165, 33],
+                                [180, 36], [195, 39], [210, 42],
+                                [225, 45], [240, 48], [255, 51],
+                                [270, 54], [285, 57], [300, 60],
+                                [315, 63], [330, 66], [345, 69],
+                                [360, 72], [15, 75], [30, 78],
+                                [45, 81], [60, 84], [75, 87], [90, 90]
+                            ]
                         }];
-
-                        valueAxis = {
-                            labels: {
-                                format: "{0}%"
-                            },
-                            line: {
-                                visible: false
-                            },
-                            axisCrossingValue: -10
-                        };
-
-                        categoryAxis = {
-                            categories: [2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011],
-                            majorGridLines: {
-                                visible: false
-                            },
-                            labels: {
-                                rotation: "auto"
-                            }
-                        };
-
-                        tooltip = {
-                            visible: true,
-                            format: "{0}%",
-                            template: "${series.name} ${value}"
-                        }
                       }
-
                     </au-code>
-                </div>
-
-                <div>
-                    <au-markdown>
-                        The Kendo UI chart is a data visualization widget which allows you to output a graphical representation of your data. It is useful when you would like to utilize modern browser technologies such as SVG or Canvas  for interactive data visualizations. The chart supports various chart types such as area, bar, line, scatter, pie and donut, etc. as well as stock (OHLC).
-
-
-                        Area chart type is suitable for displaying quantitative data as continuous lines that pass through points defined by their items' values. The portion of the graph beneath the lines is filled with a particular color for each series. The different colors in an Area chart are useful for emphasizing changes in values from several sets of similar data.
-
-
-                        To instantiate a Kendo UI chart, you need to specify an empty div with an id on the page, select this div with a jQuery selector and invoke the kendoChart() function. As a result, the chart is registered as a standard jQuery plugin.
-
-
-                        The chart can fetch data for its series from either local or remote data source. It can also use the Kendo UI DataSource as a mediator for processing data.
-                    </au-markdown>
                 </div>
             </div>
         </collapse-panel>
