--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -49,6 +49,7 @@
 <!--             <li><a route-href="route: pie-charts">Pie charts</a></li>
  -->
             <li><a route-href="route: polar-charts">Polar charts</a></li>
+            <li><a route-href="route: radar-charts">Radar charts</a></li>
           </ul>
         </li>
 
