fix(bubble-charts): fix chart sample
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/156

--- a/sample/src/charts/bubble-charts/binding-to-local-data.html
+++ b/sample/src/charts/bubble-charts/binding-to-local-data.html
@@ -6,8 +6,8 @@
                           title.bind="title"
                           legend.bind="legend"
                           series.bind="series"
-                          xAxis.bind="xAxis"
-                          yAxis.bind="yAxis"
+                          x-axis.bind="xAxis"
+                          y-axis.bind="yAxis"
                           tooltip.bind="tooltip">
           </au-kendo-chart>
 
