--- a/sample/src/charts/bubble-charts/basic-use.html
+++ b/sample/src/charts/bubble-charts/basic-use.html
@@ -5,8 +5,8 @@
                           legend.bind="legend"
                           series-defaults.bind="seriesDefaults"
                           series.bind="series"
-                          xAxis.bind="xAxis"
-                          yAxis.bind="yAxis"
+                          x-axis.bind="xAxis"
+                          y-axis.bind="yAxis"
                           tooltip.bind="tooltip">
           </au-kendo-chart>
         </collapse-panel>
