--- a/sample/src/charts/bubble-charts/binding-to-grouped-data.html
+++ b/sample/src/charts/bubble-charts/binding-to-grouped-data.html
@@ -6,8 +6,8 @@
                           legend.bind="legend"
                           chart-area.bind="chartArea"
                           series.bind="series"
-                          xAxis.bind="xAxis"
-                          yAxis.bind="yAxis"
+                          x-axis.bind="xAxis"
+                          y-axis.bind="yAxis"
                           tooltip.bind="tooltip">
           </au-kendo-chart>
         </collapse-panel>
