--- a/sample/src/charts/bar-charts/custom-pan-and-zoom.html
+++ b/sample/src/charts/bar-charts/custom-pan-and-zoom.html
@@ -1,7 +1,16 @@
 <template>
     <section>
         <collapse-panel title="Custom pan and zoom" allow-collapse.bind="false">
-
+          <au-kendo-chart render-as="canvas"
+                  data-source.bind="dataSource"
+                  category-axis.bind="{field: 'category'}"
+                  value-axis.bind="{min: 0, max: 12}"
+                  series.bind="[{type: 'column', field: 'val'}]"
+                  transitions.bind="false"
+                  kendo-drag.trigger="onDrag($event)"
+                  kendo-drag-end.trigger="onDragEnd($event)"
+                  kendo-zoom.trigger="onZoom($event)">
+          </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
