feat(sample): waterfall charts

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -51,6 +51,7 @@
             <li><a route-href="route: polar-charts">Polar charts</a></li>
             <li><a route-href="route: radar-charts">Radar charts</a></li>
             <li><a route-href="route: range-charts">Range charts</a></li>
+            <li><a route-href="route: waterfall-charts">Waterfall charts</a></li>
           </ul>
         </li>
 
