feat(sample): scatter charts

--- a/sample/src/charts/radar-charts/binding-to-grouped-data.html
+++ b/sample/src/charts/radar-charts/binding-to-grouped-data.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
+        <collapse-panel title="Binding to grouped data" allow-collapse.bind="false">
           <au-kendo-chart title.bind="{text: 'Wind Rose'}"
                           legend.bind="legend"
                           data-source.bind="dataSource"
